--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,12 @@ references
 
 #Intellij
 
+# Default ignored files
+/shelf/
+/workspace.xml
+# Datasource local storage ignored files
+/dataSources/
+/dataSources.local.xml
+# Editor-based HTTP Client requests
+/httpRequests/
 
