--- a/finance_flutter/pubspec.yaml
+++ b/finance_flutter/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   english_words: ^3.1.5
 
 dev_dependencies:
+  #reference for flutter gen https://pub.dev/packages/flutter_gen
   flutter_test:
     sdk: flutter
 
@@ -44,7 +45,6 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
