--- a/finance_flutter/pubspec.yaml
+++ b/finance_flutter/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  english_words: ^3.1.5
+  draggable_floating_button: ^0.1.1
 
 dev_dependencies:
   #reference for flutter gen https://pub.dev/packages/flutter_gen
