--- a/finance_flutter/pubspec.yaml
+++ b/finance_flutter/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   draggable_floating_button: ^0.1.1
+  flutter_bloc: ^6.0.0
+  equatable: ^2.0.0
 
 dev_dependencies:
   #reference for flutter gen https://pub.dev/packages/flutter_gen
