--- a/finance_flutter/pubspec.yaml
+++ b/finance_flutter/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.17.0
+  pie_chart: ^5.0.0
+
 dev_dependencies:
   #reference for flutter gen https://pub.dev/packages/flutter_gen
   flutter_test:
