--- a/finance_flutter/pubspec.yaml
+++ b/finance_flutter/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
     sdk: flutter
   intl: ^0.17.0
   pie_chart: ^5.0.0
+  charts_flutter: ^0.10.0
 
 dev_dependencies:
   #reference for flutter gen https://pub.dev/packages/flutter_gen
