--- a/finance_flutter/pubspec.yaml
+++ b/finance_flutter/pubspec.yaml
@@ -31,12 +31,15 @@ dependencies:
   draggable_floating_button: ^0.1.1
   flutter_bloc: ^6.0.0
   equatable: ^2.0.0
-  http: ^0.12.0
+  http: ^0.13.0
   flutter_localizations:
     sdk: flutter
   intl: ^0.17.0
   pie_chart: ^5.0.0
   charts_flutter: ^0.10.0
+  firebase_core: "^1.0.1"
+  firebase_auth: "^1.0.1"
+  flutter_facebook_auth: ^3.0.0+1
 
 dev_dependencies:
   #reference for flutter gen https://pub.dev/packages/flutter_gen
