[#177128620] Added Authentication state implementation

--- a/finance_flutter/pubspec.yaml
+++ b/finance_flutter/pubspec.yaml
@@ -40,12 +40,14 @@ dependencies:
   firebase_core: "^1.0.1"
   firebase_auth: "^1.0.1"
   flutter_facebook_auth: ^3.0.0+1
+  google_sign_in: "^4.5.1"
+  pedantic: ^1.9.0
 
 dev_dependencies:
   #reference for flutter gen https://pub.dev/packages/flutter_gen
   flutter_test:
     sdk: flutter
-
+  mockito: ^4.0.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
